# Ryzen-power-manager

./: .gitignore  CMakeLists.txt  README.md
headers/: core.h  entrie.h  entry.h
lib/: CMakeLists.txt
lib/headers/: consts.h  core.h  entry.h
lib/src/: core.cpp  entry.cpp
profiles/: 1
resources/: to_parse
src/: core.cpp  entrie.cpp  entry.cpp  main.cpp
test/: CMakeLists.txt
test/core_test/: CMakeLists.txt  constructors.h  just_test.h  test.cpp
test/entry_test/: CMakeLists.txt  constructors.h  test.cpp
ui/headers/: console_interface.h  smth.h
ui/src/: console_interface.cpp  main.cpp  smth.cpp
